--- a/php7.4-fpm/Dockerfile
+++ b/php7.4-fpm/Dockerfile
@@ -7,7 +7,7 @@ RUN curl -sSLo /usr/share/keyrings/deb.sury.org-php.gpg https://packages.sury.or
 RUN echo "deb [signed-by=/usr/share/keyrings/deb.sury.org-php.gpg] https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list
 
 RUN apt update && apt install -y \
-    php7.4-fpm php7.4-curl php7.4-gd php7.4-http php7.4-imagick \
+    php7.4-fpm php7.4-curl php7.4-gd php7.4-imagick \
     php7.4-imap php7.4-intl php7.4-mailparse php7.4-mbstring php7.4-mcrypt \
     php7.4-memcache php7.4-memcached php7.4-mysql php7.4-pgsql php7.4-raphf \
     php7.4-redis php7.4-uuid php7.4-xml php7.4-xmlrpc php7.4-xsl php7.4-zip
